fix the content alignment

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,7 +9,7 @@
   background: #e5ecf3;
 }
 
-.bar {
+.header {
   display: flex;
 
   align-items: flex-start;
